Correção de erros e adição de comentário

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </p>
 
                 <p>
-                    A idéia de melhorar a vida das pessoas através da tecnologia é algo que me motiva diáriamente na
+                    A ideia de melhorar a vida das pessoas através da tecnologia é algo que me motiva diariamente na
                     busca por ser um profissional melhor.
                 </p>
 
@@ -222,8 +222,8 @@
 
                 <h3>Objetivos</h3>
 
-                <p class="drop-cap">Após algumas experiência como freelancer e com projetos desenvolvidos em cursos, e
-                    apaixonado pelo desenvolvimento mobile
+                <p class="drop-cap">Após algumas experiências como freelancer e com projetos desenvolvidos em cursos, e
+                    entusiasta do desenvolvimento mobile,
                     procuro
                     me inserir no mercado como desenvolvedor frontend ou mobile Junior com tecnologias como HTML, CSS,
                     SaSS,
@@ -233,7 +233,7 @@
                 <h4>Citação</h4>
 
                 <i>A tecnologia move o mundo!
-                    <small>Stive Jobs - Fundador da Apple</small>
+                    <small>Steve Jobs - Fundador da Apple</small>
                 </i>
 
             </div>
@@ -365,7 +365,7 @@
                             <h5 style="color:rgb(97, 97, 97); margin-top: 0px;">Trabalho em Equipe</h5>
                         </div>
                         <div class="flip-card-back">
-                            <p>Fundamental para troca de idéias afim de atingir a melhor solução para a aplicação.</p>
+                            <p>Fundamental para troca de ideias a fim de atingir a melhor solução para a aplicação.</p>
                         </div>
                     </div>
                 </div>
@@ -553,7 +553,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Gostou de algum projeto?</h3>
-                <h1 class="gradiente-title mobile">Confira os comentário de alguns clientes.</h1>
+                <h1 class="gradiente-title mobile">Confira os comentários de alguns clientes.</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -568,7 +568,7 @@
 
                         <p>Simplesmente incrível! Desde a criação da logomarca até a finalização do site, o Anderson se
                             mostrou
-                            um profissional atencioso as minhas preferências e o resultado ficou melhor do que eu
+                            um profissional atencioso às minhas preferências e o resultado ficou melhor do que eu
                             esperava.
                             <strong>&#128512;</strong><strong>&#128151;</strong>
                         </p>
@@ -589,7 +589,22 @@
                         <img src="images/avatars/ricardo.jpg" alt="Author image" class="testimonials__avatar">
                         <div class="testimonials__info">
                             <span class="testimonials__name">Ricardo Alexandre</span>
-                            <span class="testimonials__pos">CEO, Cafe com Deus</span>
+                            <span class="testimonials__pos">CEO, Café com Deus</span>
+                        </div>
+
+                    </div>
+
+                    <div class="testimonials__slide">
+
+                        <p>A repaginação da logomarca ficou muito boa, moderna e sem perder a identidade da empresa. O
+                            site atendeu a todas as minhas expectativas,
+                            tudo se comunicando, funcionando perfeitamente na versão mobile.
+                        </p>
+
+                        <img src="images/avatars/wanderson.PNG" alt="Author image" class="testimonials__avatar">
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">Wanderson Ferreira</span>
+                            <span class="testimonials__pos">CEO, Tek Instalações</span>
                         </div>
 
                     </div>
