Justificação de Textos

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                 <h3>Quem sou eu?</h3>
 
-                <p><a href="#"><img width="120" height="120" class="pull-left" alt="sample-image"
+                <p class="about-text"><a href="#"><img width="120" height="120" class="pull-left" alt="sample-image"
                             src="images/sample-image.jpg"></a>
                     Me chamo Anderson Mauri de Almeida, tenho 28 anos, formado em Sistemas de Informação pela UNICEPLAC.
                     Comecei no mundo da tecnologia aos 12 anos de idade com cursos como: Operador de micro, Montagem e
@@ -209,7 +209,7 @@
 
                 </p>
 
-                <p>
+                <p class="about-text">
                     A ideia de melhorar a vida das pessoas através da tecnologia é algo que me motiva diariamente na
                     busca por ser um profissional melhor.
                 </p>
@@ -222,7 +222,8 @@
 
                 <h3>Objetivos</h3>
 
-                <p class="drop-cap">Após algumas experiências como freelancer e com projetos desenvolvidos em cursos, e
+                <p class="drop-cap about-text">Após algumas experiências como freelancer e com projetos desenvolvidos em
+                    cursos, e
                     entusiasta do desenvolvimento mobile,
                     procuro
                     me inserir no mercado como desenvolvedor frontend ou mobile Junior com tecnologias como HTML, CSS,
