Atualização de foto de perfil

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <h3>Quem sou eu?</h3>
 
                 <p class="about-text"><a href="#"><img width="120" height="120" class="pull-left" alt="sample-image"
-                            src="images/sample-image.jpg"></a>
+                            src="images/perfil-image.png"></a>
                     Me chamo Anderson Mauri de Almeida, tenho 28 anos, formado em Sistemas de Informação pela UNICEPLAC.
                     Comecei no mundo da tecnologia aos 12 anos de idade com cursos como: Operador de micro, Montagem e
                     Configuração,
