Atualização de Tecnologias

--- a/index.html
+++ b/index.html
@@ -304,9 +304,8 @@
                         <a href="#0" title="" class="clients__slide"><img src="images/js.png" /></a>
                         <a href="#0" title="" class="clients__slide"><img src="images/ReactJs.png" /></a>
                         <a href="#0" title="" class="clients__slide"><img src="images/React-Native.png" /></a>
-                        <a href="#0" title="" class="clients__slide"><img src="images/clients/joomla.png" /></a>
-                        <a href="#0" title="" class="clients__slide"><img src="images/clients/magento.png" /></a>
-
+                        <a href="#0" title="" class="clients__slide"><img src="images/swift.png" /></a>
+                        
                     </div> <!-- end clients -->
                 </div> <!-- end col-full -->
             </div> <!-- end clients-outer -->
