--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                     cursos, e
                     entusiasta do desenvolvimento mobile,
                     procuro
-                    me inserir no mercado como desenvolvedor frontend ou mobile Junior com tecnologias como HTML, CSS,
+                    me inserir no mercado como desenvolvedor frontend junior com tecnologias como HTML, CSS,
                     SaSS,
-                    Javascript, React e React-Native.
+                    Javascript e React; ou desenvolvedor mobile junior com Swift e React-Native .
                 </p>
 
                 <h4>Citação</h4>
