Correção de email

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <h4>Citação</h4>
 
                 <i>A tecnologia move o mundo!
-                    <small>Steve Jobs - Fundador da Apple</small>
+                    <small>Steve Jobs - Fundador da Apples</small>
                 </i>
 
             </div>
@@ -700,7 +700,7 @@
                     <div class="cinfo">
                         <h5>E-mail:</h5>
                         <p>
-                            maurianderson@gmai.com
+                            maurianderson@gmail.com
                         </p>
                     </div>
 
